fix: Fix header styling on small screens
The header now collapses to a better appearance on very small
screens and is not encroached by the map.

--- a/css/styles.css
+++ b/css/styles.css
@@ -400,6 +400,13 @@ nav h1 a {
 }
 
 @media screen and (max-width: 425px) {
+  
+  nav h1 a {
+    font-size: 0.9rem;
+    display: block;
+    line-height: 1.4rem;
+  }
+
   .filter-options {
     flex-direction: column;
     height: 120px;
